# libio

./: INSTALL  Makefile.in  README  bootstrap.sh  config.mk  config.mk.in  configure.ac  libio.pc.in  package.mk
include/: Makefile  cfunction.h  io.h  io_config.h  io_init.h  io_lua_table.h  io_parser.h  io_template.h  lua_table.h  lua_table_iterator.h  lua_value.h  nil.h  table_iterator.h  template.h  value.h
src/: Makefile  Makefile.in  cfunction.c  compiler.c  compiler.h  io_config.c  io_embody.c  io_embody.h  io_globals.c  io_globals.h  io_init.c  io_iolib.c  io_iolib.h  io_lua_table.c  io_parser.c  io_template.c  io_template_private.h  iolib.c  lua_table.c  lua_table_iterator.c  nil.c  slt2.c  slt2.h  table_iterator.c  template.c  value.c  value_private.h
t/: Makefile  Makefile.in  parser.c  parser.t.c  tap.h  template.t.c  test_lua_table_iterator.c  test_table_iterator.c  test_template.c  test_value.c
t/files/: test.inc
tools/: lua2c.lua
